#
# See COPYRIGHT notice in top-level directory.
#
# @configure_input@

include_HEADERS = darshan-bgq-log-format.h \
                  darshan-dxt-log-format.h \
                  darshan-hdf5-log-format.h \
                  darshan-log-format.h \
                  darshan-lustre-log-format.h \
                  darshan-mdhim-log-format.h \
                  darshan-mpiio-log-format.h \
                  darshan-null-log-format.h \
                  darshan-pnetcdf-log-format.h \
                  darshan-posix-log-format.h \
                  darshan-stdio-log-format.h

