# See COPYRIGHT notice in top-level directory.
#
# @configure_input@

human_pmdir = $(libdir)/Number/Bytes
dist_human_pm_DATA = lib/Number/Bytes/Human.pm

poddir = $(libdir)/Pod
dist_pod_DATA = lib/Pod/Constants.pm \
                lib/Pod/LaTeX.pm

texdir = $(libdir)/TeX
dist_tex_DATA = lib/TeX/Encode.pm

summary_sharedir = $(datarootdir)
dist_summary_share_DATA = share/access-hist-eps.gplt \
                          share/file-access-eps.gplt \
                          share/file-access-table.tex \
                          share/job-table.tex \
                          share/op-counts-eps.gplt \
                          share/pattern-eps.gplt \
                          share/summary.tex \
                          share/time-summary-eps.gplt \
                          share/title.tex

bin_SCRIPTS = bin/darshan-job-summary.pl

